spiky ball is trigger

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ crashlytics-build.properties
 
 deploy
 .vscode
+/Assets/Mirza Beig/Particle Systems/Ultimate VFX/Demos/Starfall/
+/Assets/Mirza Beig/Particle Systems/Ultimate VFX/Demos/The Last Particle/
